--- a/background.css
+++ b/background.css
@@ -1,61 +1,10 @@
-div#post{
-    background rgba(255, 255, 255, 0.9)
+/* 主页半透明度 */
+.layout_page {
+    opacity: 0.9;
   }
-  div#page{
-    background rgba(255, 255, 255, 0.9)
-  }
-  div#archive{
-    background rgba(255, 255, 255, 0.9)
-  }
-  div#tag{
-    background rgba(255, 255, 255, 0.9)
-  }
-  div#category{
-    background rgba(255, 255, 255, 0.9)
-  }
-
   
-/* 滚动条 */
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: rgba(73, 177, 245, 0.2);
-  border-radius: 2em;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #49b1f5;
-  background-image: -webkit-linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.4) 25%,
-    transparent 25%,
-    transparent 50%,
-    rgba(255, 255, 255, 0.4) 50%,
-    rgba(255, 255, 255, 0.4) 75%,
-    transparent 75%,
-    transparent
-  );
-  border-radius: 2em;
-}
-
-::-webkit-scrollbar-corner {
-  background-color: transparent;
-}
-
-::-moz-selection {
-  color: #fff;
-  background-color: #49b1f5;
-}
-
-body {
-  cursor: url(https://cdn.jsdelivr.net/gh/sviptzk/HexoStaticFile@latest/Hexo/img/default.cur),
-      default;
-}
-a,
-img {
-  cursor: url(https://cdn.jsdelivr.net/gh/sviptzk/HexoStaticFile@latest/Hexo/img/pointer.cur),
-      default;
-}
+  /* 滚动条优化 */
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
